# Agent_Smith

./: .env  .gitignore  BENCHMARK_REPORT.md  CLAUDE.md  README.md  agent_mbpp.py  agent_swebench.py  config.json  infos.txt  mcp_tools_mbpp.py  mcp_tools_swebench.py  pyproject.toml
benchmark/django__django-11066/: deepseek_deepseek-v4-flash.json  llama-3.1-8b-instant.json  llama-3.3-70b-versatile.json  meta-llama_llama-4-maverick:fre.json  meta-llama_llama-4-scout-17b-16e-instruct.json  mistral-large-latest.json  mistral-medium-latest.json  qwen_qwen3.6-27b.json  swe_task.json
benchmark/django__django-13109/: deepseek_deepseek-v4-flash.json  llama-3.1-8b-instant.json  llama-3.3-70b-versatile.json  meta-llama_llama-4-maverick:fre.json  meta-llama_llama-4-scout-17b-16e-instruct.json  mistral-large-latest.json  mistral-medium-latest.json  qwen_qwen3.6-27b.json  swe_task.json
benchmark/pydata__xarray-4629/: deepseek_deepseek-v4-flash.json  llama-3.1-8b-instant.json  llama-3.3-70b-versatile.json  meta-llama_llama-4-maverick:fre.json  meta-llama_llama-4-scout-17b-16e-instruct.json  mistral-large-latest.json  mistral-medium-latest.json  qwen_qwen3.6-27b.json  swe_task.json
benchmark/scikit-learn__scikit-learn-13439/: deepseek_deepseek-v4-flash.json  llama-3.1-8b-instant.json  llama-3.3-70b-versatile.json  meta-llama_llama-4-maverick:fre.json  meta-llama_llama-4-scout-17b-16e-instruct.json  mistral-large-latest.json  mistral-medium-latest.json  qwen_qwen3.6-27b.json  swe_task.json
benchmark/sympy__sympy-18189/: deepseek_deepseek-v4-flash.json  llama-3.1-8b-instant.json  llama-3.3-70b-versatile.json  meta-llama_llama-4-maverick:fre.json  meta-llama_llama-4-scout-17b-16e-instruct.json  mistral-large-latest.json  mistral-medium-latest.json  qwen_qwen3.6-27b.json  swe_task.json
cache/: mbpp_solution.json  mbpp_task.json
docs/: theo.md
moulinette/: README.md  models_public.py  pyproject.toml
moulinette/evaluations/mbpp/2026-03-01_13-12-36/282/: task.json
moulinette/moulinette/: __init__.py  __main__.py  models.py
moulinette/moulinette/mbpp/: __init__.py  interact.py
moulinette/moulinette/mbpp/data/: sanitized_tasks.json
moulinette/moulinette/swebench/: __init__.py  interact.py
moulinette/tests/: test_mbpp.py  test_swebench.py
srcs/: models.py  roundtrip_test.py  tools.py
srcs/agent_swebench/: agent_swebench.py
srcs/llm/: __init__.py  client.py  (+6 more)
swe_bench/: swebench_agent.py
(+7 files in other folders)
