[project]
name = "agent-smith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[project.scripts]
sandbox = "srcs.sandbox.main:main"




