[project]
name = "agent-smith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mcp>=1.28.0",
    "mypy>=2.1.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sandbox = "srcs.sandbox.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srcs"]
