[project]
name = "agent-smith"
version = "0.1.0"
description = "Autonomous code agent (Thought -> Code -> Observation) with a home-made security sandbox and MCP tools, benchmarked on MBPP and SWE-bench."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fire>=0.7.1",
    "mcp>=1.28.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
]

[project.scripts]
sandbox = "srcs.sandbox.main:main"
agent_mbpp = "srcs.mbpp.agent_mbpp:main"
agent_swebench = "srcs.agent_swebench.agent_swebench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srcs"]
